# py-sync-fs-triples

./: .gitignore  Dockerfile  LICENSE  Makefile  README.rst  debug-logconf.yml  docker.md  pyproject.toml
.github/workflows/: build_pages.yml  pr_validation.yml
syncfstriples/: __init__.py  __main__.py  __version__.py  exceptions.py  service.py
tests/: conftest.py  test_demo.py  test_fname_ng_conversion.py  test_main_cli.py  test_service.py  test_sync.py  test_sync_fs_triples.py
